--- a/Frontend/src/Pages/AboutUs/AboutUs.css
+++ b/Frontend/src/Pages/AboutUs/AboutUs.css
@@ -352,7 +352,8 @@
     height: 60px;
     padding: 4px;
     gap: 8px;
-    justify-self: center;
+    /* justify-self: center; */
+    margin: 0px auto;
 }
   .history-image-container {
     width: 100%;
@@ -447,6 +448,7 @@
     max-height: 280px;
     object-fit: cover;
     border-radius: 8px;
+    /* align-items: center; */
   }
 
   .team-card-content {
