--- a/Frontend/src/Pages/ContactUs/ContactPage.css
+++ b/Frontend/src/Pages/ContactUs/ContactPage.css
@@ -109,7 +109,7 @@
     gap: 20px;
   }
   
-  .contact-form input,
+  /* .contact-form input,
   .contact-form textarea {
     width: 130%;
     padding: 14px 20px ;
@@ -119,11 +119,18 @@
     transition: 0.3s ease;
     font-size: 16px;
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid black; */
     /* margin-top: 20px; */
     /* background: #f9f9f9; */
+  /* } */
+  .contact-form input,
+  .contact-form textarea {
+    width: 100%;
+    font-size: 16px; /* ✅ prevent iOS zoom */
+    padding: 12px 16px;
+    border: 1px solid black;
   }
-
+  
   .contact-form textarea {
     padding: 14px 20px;
     /* min-height: 350px; */
