--- a/Frontend/src/Pages/ContactUs/ContactPage.css
+++ b/Frontend/src/Pages/ContactUs/ContactPage.css
@@ -294,11 +294,11 @@
     .contact-form input,
     .contact-form textarea {
       width: 100%;
-      font-size: 16px !important;
+      font-size: 14px;
       padding: 12px 16px;
       border: 1px solid black;
     }
-  }
+  
     .contact-form textarea {
       min-height: 180px;
     }
