--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -30,7 +30,7 @@
     width: 380px;
     height: 87px;
     margin-bottom: 24px;
-    margin-left: -15px;
+    /* margin-left: -15px; */
 }
 
 .footer-left p,
@@ -47,10 +47,15 @@
     width: 381px;
     height: 56px;
     display: flex;
-    gap: 16px;
+    /* gap: 16px; */
     margin-top: 25px;
-    margin-left: 15px;
+    margin-left: -8px;
 }
+
+.footer-logo{
+    margin-left: -22px;
+}
+
 
 .footer-social img {
     border-radius: 100%;
@@ -354,7 +359,10 @@
         width: auto;
         height: auto;
         margin-bottom: 16px;
-        margin-left: 0;
+        /* margin-left: 0; */
+    }
+    .footer-logo{
+        margin-left: -18px;
     }
 
     .footer-left p {
